WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268356
[WebGPU] Running api,validation,image_copy,* crashes the GPU process
https://bugs.webkit.org/show_bug.cgi?id=268356
Summary
[WebGPU] Running api,validation,image_copy,* crashes the GPU process
Mike Wyrzykowski
Reported
2024-01-29 20:56:16 PST
[WebGPU] Running api,validation,image_copy,* crashes the GPU process
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-01-29 20:56:29 PST
<
rdar://problem/121902940
>
Mike Wyrzykowski
Comment 2
2024-01-29 21:07:23 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23491
EWS
Comment 3
2024-02-04 13:30:22 PST
Committed
274076@main
(0b6b7cf68c03): <
https://commits.webkit.org/274076@main
> Reviewed commits have been landed. Closing PR #23491 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug