[WebGPU] Running api,validation,image_copy,* crashes the GPU process https://bugs.webkit.org/show_bug.cgi?id=268356 <radar://121902940>

Reviewed by Tadeu Zagallo.

Having api,validation,image_copy,* pass is tracked by
https://bugs.webkit.org/show_bug.cgi?id=267284

Right now, apply a smaller set of changes such
that running the test does not crash the GPU process.

* Source/WebGPU/WebGPU/CommandEncoder.mm:
(WebGPU::CommandEncoder::copyBufferToTexture):
(WebGPU::CommandEncoder::copyTextureToBuffer):
* Source/WebGPU/WebGPU/Queue.mm:
(WebGPU::Queue::writeTexture):
* Source/WebGPU/WebGPU/Texture.mm:
(WebGPU::Texture::aspectSpecificFormat):

Canonical link: https://commits.webkit.org/274076@main